* fix bug overflow drop-down-menu

--- a/static/content/site.css
+++ b/static/content/site.css
@@ -370,7 +370,7 @@ svg {
 .frame_lottie {
     width: 5vw;
     height: 10vh;
-    border: 1px solid #828282;
+    border: 1px solid #717171;
     box-sizing: border-box;
     border-radius: 6px;
     cursor: grab;
@@ -1852,16 +1852,21 @@ div.card-group{
 }
 
 .card-icons-svg{
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1.25em;
+    height: 1.2em;
     cursor: pointer;
-    margin: 0 0.5rem;
+    /*margin: 0 0.5rem;*/
 
-    fill: #828282;
+    fill: #717171;
     -webkit-transition: fill 0.2s ease-out;
     -moz-transition: fill 0.2s ease-out;
     -o-transition: fill 0.2s ease-out;
     transition: fill 0.2s ease-out;
+}
+
+.dropdown-item .card-icons-svg{
+    margin: 0 8%;
+
 }
 
 .disabled_svg{
@@ -1884,8 +1889,9 @@ div.card-group{
 }
 
 .card-footer{
-    margin-top: 1rem;
-    padding:  0.75rem 0.5rem;
+    margin-top: 10%;
+    padding: 0% 4%;
+    padding-top: 8%;
     display: none;
     background-color: transparent;
     border-top-color: rgba(72, 95, 110, 0.12);
@@ -1896,11 +1902,6 @@ div.card-group{
 
 
 .dropdown-menu{
-    /*z-index: 2000 !important;*/
-    /*display:block;*/
-    /*margin-right: 160%;*/
-    /*z-index: 20000 !important;*/
-    /*transform: translate3d(0,0,10px) !important;*/
     border: 1px solid #F2F2F2;
     box-sizing: border-box;
     box-shadow: 0px 4px 8px rgba(99, 99, 99, 0.2);
